 * Added an experimental hacking key for setting the icon size of LXQT's main menu when it isn't styled by LXQT.
 * Added "What's This?" to Kvantum Manager.
 * Added a workaround for a Qt5 bug (QTBUG-47043), because of which, _NET_WM_WINDOW_TYPE is set to _NET_WM_WINDOW_TYPE_NORMAL instead of _NET_WM_WINDOW_TYPE_DROPDOWN_MENU or _NET_WM_WINDOW_TYPE_POPUP_MENU for QMenu.

V0.9.5
---------
 * Added Openbox themes for use with the included Kvantum themes (under LXQT).
 * Added three extra themes (KvSimplicity, KvGnomeDark and KvFlatRed), polished some themes and modified KvDarkRed.
 * At last a workaround for the Qt5 "hover bug", because of which, comboboxes and buttons remain in the mouseover state after their menus are closed and without the cursor being over them.
 * Use the pressed state for focused non-editable comboboxes.
 * Don't enforce darkness on text editors.
 * Moved the Kvantum icon to the standard hicolor directory.
 * Made the submenu overlap accurate. (As a result, a hidden mistake in the calculation of menu/tootip shadow thickness is fixed too.)
 * A workaround for Qt's messy RTL submenu positioning.

V0.9.4
---------
 * Added a hacking key for not styling any toolbar other than the top one.
 * Added a hacking key for tinting label icons on mouseover.
 * Added a hacking key for setting the opacity of disabled icons.
 * Draw each spinbox indicator only once.
 * Draw framed spin buttons vertically if a null widget is fed into the related methods.
 * Show all menu-items in the case of too big menus.
 * A little overlap for submenus.
 * Fixes for tabbar base panel.
 * Added KvGnome, with a Gnome like look and feel, to the extra themes.
 * The interior used in partial frame expansion should have the frame name.
 * Workaround for bad hard-coded slider styling.
 * Swap left and right text margins in RTL.
 * Added a general key for submenu overlap with -1 (automatic) as default.