@@ -208,6 +208,12 @@ combo_as_lineedit                true/false           Draw an editable combo box
 left_tabs                         true/false          Align tabs to the left edge?
                                                       Tabs are centered by default.
 
+center_doc_tabs                   true/false          Always center tabs if the tab widget is
+                                                      in the document mode and even when the
+                                                      key "left_tabs" is true? False by default,
+                                                      which means that tabs are aligned in the
+                                                      document mode as in the usual mode.
+
 attach_active_tab                 true/false          Attach the active tab to the
                                                       tab widget? It is detached
                                                       by default.
