@@ -8232,7 +8232,15 @@ int Style::styleHint(StyleHint hint,
 
     case SH_TabBar_Alignment : {
       if (tspec_.left_tabs)
+      {
+        if (tspec_.center_doc_tabs)
+        {
+          const QTabWidget *tw = qobject_cast<const QTabWidget *>(widget);
+          if (!tw || tw->documentMode())
+            return Qt::AlignCenter;
+        }
         return Qt::AlignLeft;
+      }
       else
         return Qt::AlignCenter;
     }
