@@ -13,6 +13,7 @@ V0.9.6
  * Added an experimental hacking key for setting the icon size of LXQT's main menu when it isn't styled by LXQT.
  * Added "What's This?" to Kvantum Manager.
  * Added a workaround for a Qt5 bug (QTBUG-47043), because of which, _NET_WM_WINDOW_TYPE is set to _NET_WM_WINDOW_TYPE_NORMAL instead of _NET_WM_WINDOW_TYPE_DROPDOWN_MENU or _NET_WM_WINDOW_TYPE_POPUP_MENU for QMenu.
+ * Added a key for always centering tabs in the document mode.
 
 V0.9.5
 ---------
